Fixed: lngChfngerText align changed to center in header

--- a/src/components/AppHeader/AppHeader.module.css
+++ b/src/components/AppHeader/AppHeader.module.css
@@ -71,6 +71,7 @@
   text-rendering: optimizeLegibility;
   color: black;
   transition: color 0.5s ease-in-out;
+  text-align: center;
 }
 
 .lngSwitcher {
